Базовые операции с тендером